# quetoo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cmd.c  common.c  console.c  console.h  cvar.c  cvar.h  filesystem.c  filesystem.h  image.c  image.h  mem.c  mem_buf.h  quake2world.h  quetoo.h  shared.c  shared.h  sys.c
src/cgame/: cgame.h
src/cgame/default/: cg_client.c  cg_effect.c  cg_emit.c  cg_entity.c  cg_entity.h  cg_entity_trail.c  cg_hud.c  cg_main.c  cg_particle.c  cg_predict.c  cg_score.c  cg_temp_entity.c  cg_view.c
src/client/: cl_entity.c  cl_http.c  cl_http.h  cl_input.c  cl_keys.c  cl_main.c  cl_parse.c  cl_parse.h  cl_predict.c  cl_predict.h  cl_screen.c  cl_types.h  cl_view.c
src/client/renderer/: r_bsp.c  r_bsp.h  r_bsp_light.c  r_bsp_model.c  r_draw.c  r_element.c  r_entity.c  r_flare.c  r_image.c  r_light.c  r_lighting.c  r_lightmap.c  r_main.c  r_material.c  r_mesh.c  r_mesh.h  r_mesh_model.c  r_mesh_shadow.c  r_model.c  r_sky.c  r_state.c  r_state.h  r_types.h
src/client/sound/: s_mix.c  s_mix.h  s_music.c  s_types.h
src/client/ui/: ui.h  ui_main.c  ui_main.h
src/collision/: cm_model.h  cm_test.c  cm_trace.c  cm_types.h  cm_vis.c  cm_vis.h
src/game/: game.h
src/game/default/: bg_pmove.c  bg_pmove.h  g_ballistics.c  g_client.c  g_client.h  g_client_stats.c  g_client_view.c  g_cmd.c  g_cmd.h  g_combat.c  g_combat.h  g_entity.c  g_entity_func.c  g_item.c  g_item.h  g_main.c  g_physics.c  g_types.h  g_util.c  g_util.h  g_weapon.c  g_weapon.h
src/main/: main.c
src/master/: main.c
src/net/: net.c  net.h  net_chan.c  net_chan.h  net_message.c  net_message.h  net_tcp.c  net_tcp.h  net_types.h  net_udp.c  net_udp.h
src/server/: sv_admin.c  sv_console.c  sv_entity.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_send.h  sv_types.h  sv_world.c
src/tests/: check_thread.c
src/tools/q2wmap/: brush.c  bspfile.c  csg.c  faces.c  flow.c  lightmap.c  main.c  map.c  monitor.c  monitor.h  patches.c  portals.c  q2wmap.h  qaas.c  qbsp.c  qbsp.h  qlight.c  qlight.h  qvis.c  qvis.h  qzip.c  scriplib.c  scriplib.h  threads.c
win32/vs2013/: Q2W.psess  q2w.sln
win32/vs2013/Q2W/: q2w.vcxproj  q2w.vcxproj.filters
win32/vs2013/ai/: ai.vcxproj  ai.vcxproj.filters
win32/vs2013/cgame/: cgame.vcxproj  cgame.vcxproj.filters
win32/vs2013/client/: client.vcxproj  client.vcxproj.filters
win32/vs2013/cmodel/: cmodel.vcxproj  cmodel.vcxproj.filters
win32/vs2013/common/: common.vcxproj  common.vcxproj.filters
win32/vs2013/console/: console.vcxproj  console.vcxproj.filters
win32/vs2013/filesystem/: filesystem.vcxproj  filesystem.vcxproj.filters
win32/vs2013/game/: game.vcxproj  game.vcxproj.filters
win32/vs2013/image/: image.vcxproj  image.vcxproj.filters
win32/vs2013/lib/: ai.lib  client.lib  cmodel.lib  common.lib  console.lib  filesystem.lib  image.lib  matrix.lib  mem.lib  net.lib  pmove.lib  renderer.lib  server.lib  shared.lib  sound.lib  swap.lib  sys.lib  thread.lib  ui.lib
win32/vs2013/lib/jpeg-9a/: jconfig.h  jpeg.vcxproj
win32/vs2013/lib/jpeg-9a/lib/: jpeg.lib
win32/vs2013/lib/physfs-2.0.3/: physfs.vcxproj  physfs.vcxproj.filters
win32/vs2013/lib/physfs-2.0.3/lib/: physfs.lib
win32/vs2013/matrix/: matrix.vcxproj  matrix.vcxproj.filters
win32/vs2013/mem/: mem.vcxproj  mem.vcxproj.filters
win32/vs2013/net/: net.vcxproj  net.vcxproj.filters
win32/vs2013/pmove/: pmove.vcxproj  pmove.vcxproj.filters
win32/vs2013/q2wmap/: q2wmap.vcxproj  q2wmap.vcxproj.filters
win32/vs2013/renderer/: renderer.vcxproj  renderer.vcxproj.filters
win32/vs2013/server/: server.vcxproj  server.vcxproj.filters
win32/vs2013/shared/: shared.vcxproj  shared.vcxproj.filters
win32/vs2013/sound/: sound.vcxproj  sound.vcxproj.filters
win32/vs2013/swap/: swap.vcxproj  swap.vcxproj.filters
win32/vs2013/sys/: sys.vcxproj  sys.vcxproj.filters
win32/vs2013/thread/: thread.vcxproj  thread.vcxproj.filters
win32/vs2013/ui/: ui.vcxproj  ui.vcxproj.filters
